[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "GOSTrocks"
description = "Miscellaneous geospatial functions concerning vector, raster, and network analysis"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["gostrocks", "raster", "GOST"]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"

authors = [
	{ name = "Benjamin P. Stewart", email = "ben.gis.stewart@gmail.com" },
	{ name = "Andres Chamorro", email = "afche18@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://github.com/worldbank/GOSTrocks"
"Bug Reports" = "https://github.com/worldbank/GOSTrocks/issues"
"Source" = "https://github.com/worldbank/GOSTrocks"
